  preprocessing directives. Added a new test case verifying the skipped_token
  hook gets called reproducibly (t_2_020.cpp).
- Fixed a problem with the pp hooks 'expanding_object_like_macro' and 
  'expanding_function_like_macro', which when returning true were stopping all
  preprocessing instead of just inhibiting the expansion of the macro.

Boost V1.44.0
- V2.0.6
- Added information about the file type to iteration context. This can be 
  either main_file, system_header, or user_header depending whether the handled 
  file is the main file to preprocess, a include file opened from `#include <>`, 
  or a include file opened from `#include ""`. 
- Added support for new Boost visibility macros. Properly exported all 
  exceptions, etc.

Boost V1.43.0
- V2.0.5
- Fixed the wave driver application to strip leading and trailing whitespace
  from macro names specified on the command line using -U.
- Fixed line number counting for lines containing nothing but whitespace 
  followed by a C++ comment if the next line is a pp directive.
- Fixed emitting of a #line directive after returned from an include file.
- A couple of fixes allowing to properly report the current line number in 
  #line directives for different whitespace preserve modes (see --preserve/-p).
- Added new preprocessing hook: emit_line_directive, allowing to customize the 
  format of the generated #line directive.
- Changed --line/-l command line option of the wave driver application to 
  accept 0, 1, and 2 as options. The option values 0 and 1 behave as before 
  (disable/enable the generation of #line directives), while the option value 2
  will generate the #line directive using the relative filename (instead of the
  absolute filename emitted from option 1). The default option is value 1.
- Added new example: emit_custom_line_directives, demonstrating the use of the 
  new preprocessing hook.
- Added new preprocessing hook: found_unknown_directive, which is being invoked 