@@ -107,10 +107,11 @@ interpret_pragma(ContextT &ctx, typename ContextT::token_type const &act_token,
                             )[spirit_assign_actor(values)],
                     pattern_p(WhiteSpaceTokenType, TokenTypeMask|PPTokenFlag)).hit)
             {
+                typename ContextT::string_type msg(
+                    impl::as_string<string_type>(it, end));
                 BOOST_WAVE_THROW_CTX(ctx, preprocess_exception, 
                     ill_formed_pragma_option,
-                    impl::as_string<string_type>(it, end).c_str(), 
-                    act_token.get_position());
+                    msg.c_str(), act_token.get_position());
                 return false;
             }
 
@@ -169,10 +170,11 @@ interpret_pragma(ContextT &ctx, typename ContextT::token_type const &act_token,
                        ).hit
                )
             {
+                typename ContextT::string_type msg(
+                    impl::as_string<string_type>(it, end));
                 BOOST_WAVE_THROW_CTX(ctx, preprocess_exception, 
                     ill_formed_pragma_message,
-                    impl::as_string<string_type>(it, end).c_str(), 
-                    act_token.get_position());
+                    msg.c_str(), act_token.get_position());
                 return false;
             }
 
@@ -184,9 +186,10 @@ interpret_pragma(ContextT &ctx, typename ContextT::token_type const &act_token,
             }
 
         // output the message itself
+            typename ContextT::string_type msg(impl::as_string(values));
             BOOST_WAVE_THROW_CTX(ctx, preprocess_exception, 
                 pragma_message_directive, 
-                impl::as_string(values).c_str(), act_token.get_position());
+                msg.c_str(), act_token.get_position());
             return false;
         }
 #endif
